# pyhamilton

./: pyproject.toml
pyhamilton/: __init__.py  deckresource.py  defaultcmds.py  hhs_wrappers.py  interface.py  liquid_handling_wrappers.py  oemerr.py  plate_reader_wrappers.py
pyhamilton/star-oem/BioTekGen5/: BioTekGen5.hs_  BioTekGen5.stp
pyhamilton/star-oem/VENUS_Method/: HslHamHeaterShakerLib.chw  STAR_OEM_Test.hsl  STAR_OEM_Test.lay  STAR_OEM_Test.med  STAR_OEM_Test.res  STAR_OEM_Test.stp  STAR_OEM_Test.sub  STAR_OEM_noFan.hsl  STAR_OEM_noFan.med  STAR_OEM_noFan.stp  STAR_OEM_noFan.sub  STAR_OEM_toolkit.hs_  STAR_OEM_toolkit.hsi  STAR_OEM_toolkit.smt  STAR_OEM_toolkit.stp  ~Hx17F9.hsl  ~Hx17F9.sub  ~Hx2D24.hsl  ~Hx2D24.sub  ~Hx4D45.hsl  ~Hx4D45.sub  ~Hx9794.hsi  ~Hx9B13.hsl  ~Hx9B13.sub  ~HxD5CD.hsl  ~HxD5CD.sub  ~HxFE62.hsl  ~HxFE62.sub
pyhamilton/star-oem_backup/BioTekGen5/: BioTekGen5.hsi  BioTekGen5.smt
pyhamilton/star-oem_backup/VENUS_Method/: STAR_OEM_noFan.hsl  STAR_OEM_noFan.med  STAR_OEM_noFan.stp
